deploy: ad9945aa60ebb7d16f84142311e20f9dafbe4f08

--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,3365],[[4,5,6,0,[],[0,18,3345],[],[[7,0,0,[],[0,156,3145,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,1726],[[4,5,6,0,[],[1,20,1705],[],[[7,0,0,[],[1,165,1499],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk","*Page should have contained text 'Novo herói salvo!' but did not."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:03","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:03","fail":1,"id":"s1-s1","label":"Tests.Test Cases","name":"Test Cases","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s1","label":"Tests.Test Cases","name":"Test Cases","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1629836523783;
+window.output["baseMillis"] = 1629837063566;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3374;
+window.output["generated"] = 1737;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
