--- a/report.html
+++ b/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,22079],[[4,5,6,0,[],[0,23,22054],[],[[7,0,0,[],[0,196,21815,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3262],[[4,5,6,0,[],[1,32,3228],[],[[7,0,0,[],[1,253,2946],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk","*Element 'xpath=.//app-create/div/div/div/h3' not visible after 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:22","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:22","fail":1,"id":"s1-s1","label":"Tests.Test Cases","name":"Test Cases","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s1","label":"Tests.Test Cases","name":"Test Cases","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1629905082469;
+window.output["baseMillis"] = 1629905393016;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22088;
+window.output["generated"] = 3273;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
