deploy: 7504e4c6f6b01878db43089cce1b78417835b30a

--- a/log.html
+++ b/log.html
@@ -1796,13 +1796,13 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,7948],[[4,5,6,0,[],[0,21,7925],[],[[7,0,0,[],[0,171,7716,8],[[0,9,10,0,0,0,0,0,[0,172,7714],[[0,11,12,0,13,14,0,0,[0,173,7712],[[0,15,16,0,0,0,0,0,[0,173,7712],[[0,17,18,0,19,20,0,0,[1,173,2435],[[8,174,2,21]]],[0,22,18,0,23,24,0,0,[0,2608,5276],[[0,25,18,0,26,0,0,0,[1,7791,92],[[8,7882,2,27]]],[8,7884,5,8]]],[0,28,18,0,29,30,0,0,[3,7885,0],[]]]]]]]],[0,31,10,0,0,0,0,0,[3,7886,0],[]],[0,32,10,0,0,0,0,0,[3,7886,0],[]],[0,33,10,0,0,0,0,0,[3,7887,0],[]],[0,34,10,0,0,0,0,0,[3,7887,0],[]]]]],[[2,35,16,0,0,0,0,0,[1,7888,58],[[0,36,18,0,37,0,0,0,[1,7889,57],[]]]]],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,7920],[[4,5,6,0,[],[0,21,7898],[],[[7,0,0,[],[0,172,7689,8],[[0,9,10,0,0,0,0,0,[0,173,7687],[[0,11,12,0,13,14,0,0,[0,173,7686],[[0,15,16,0,0,0,0,0,[0,173,7686],[[0,17,18,0,19,20,0,0,[1,173,2387],[[8,174,2,21]]],[0,22,18,0,23,24,0,0,[0,2560,5298],[[0,25,18,0,26,0,0,0,[1,7763,94],[[8,7856,2,27]]],[8,7858,5,8]]],[0,28,18,0,29,30,0,0,[3,7858,1],[]]]]]]]],[0,31,10,0,0,0,0,0,[3,7860,0],[]],[0,32,10,0,0,0,0,0,[3,7860,0],[]],[0,33,10,0,0,0,0,0,[3,7860,0],[]],[0,34,10,0,0,0,0,0,[3,7861,0],[]]]]],[[2,35,16,0,0,0,0,0,[1,7862,57],[[0,36,18,0,37,0,0,0,[1,7862,57],[]]]]],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk","*Element 'xpath=.//nav/div/li[2]/a' not visible after 5 seconds.","*Dado que desejo salvar um novo herói","*bdd_pt-br","*Run Keyword","*BuiltIn","*<p>Executes the given keyword with the given arguments.\x3c/p>","*${keyword}","*que desejo salvar um novo herói","*resource_bdd","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://web-heroi.herokuapp.com/herois\">https://web-heroi.herokuapp.com/herois\x3c/a>'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${CRIAR}","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-1.png\"><img src=\"selenium-screenshot-1.png\" width=\"800px\">\x3c/a>","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Web-Herói","*Quando clicar em &quot;Criar&quot;","*E Inserir &quot;Hulk&quot;, &quot;Bruce Benner&quot; e &quot;Marvel&quot;","*E clicar em &quot;Salvar&quot;","*Então apresentará a mensagem &quot;Herói salvo com sucesso!&quot;","*Fechar Navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/opt/robotframework/tests","*../tests","*Test Cases","*/opt/robotframework/tests/test_cases.robot","*../tests/test_cases.robot","*Cenário: Salvando um novo herói - Hulk","*Element 'xpath=.//*[@id=\"navbarTogglerDemo02\"]/ul/li[2]/a' not visible after 5 seconds.","*Dado que desejo salvar um novo herói","*bdd_pt-br","*Run Keyword","*BuiltIn","*<p>Executes the given keyword with the given arguments.\x3c/p>","*${keyword}","*que desejo salvar um novo herói","*resource_bdd","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://web-heroi.herokuapp.com/herois\">https://web-heroi.herokuapp.com/herois\x3c/a>'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${CRIAR}","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-1.png\"><img src=\"selenium-screenshot-1.png\" width=\"800px\">\x3c/a>","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*Web-Herói","*Quando clicar em &quot;Criar&quot;","*E Inserir &quot;Hulk&quot;, &quot;Bruce Benner&quot; e &quot;Marvel&quot;","*E clicar em &quot;Salvar&quot;","*Então apresentará a mensagem &quot;Herói salvo com sucesso!&quot;","*Fechar Navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:08","fail":1,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0},{"elapsed":"00:00:08","fail":1,"id":"s1-s1","label":"Tests.Test Cases","name":"Test Cases","pass":0,"skip":0}]];
@@ -1811,10 +1811,10 @@ window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"All Tests","p
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1647620601293;
+window.output["baseMillis"] = 1647621269744;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7953;
+window.output["generated"] = 7925;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
